#pragma once

#include <TextureStorage/TextureId.h>

#include <Common/Memory.h>
#include <Common/Stl/HashMap.h>

#include <atomic>

//======================================================================================================================
namespace texture {
    class Texture;
    struct TextureData;
}

//======================================================================================================================
namespace texture_storage {
    class TextureStorage final {
    public:
        void clear();
        TextureId add(uptr<texture::Texture>);

        texture::Texture& get(TextureId);
        const texture::Texture& get(TextureId) const;

        // TODO: store it somewhere (Framework? At user side at all?) and pass by refs
        static TextureStorage& getInstance();

    private:
        using _TextureRawId = TextureId::Id;

        HashMap<_TextureRawId, uptr<texture::Texture>> _textures;
        std::atomic<_TextureRawId> _nextId = 1;
    };
}
