@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package texture {
    '===================================================================================================================
    abstract class TexturingMgr
}

'=======================================================================================================================
package texture_storage {
    class TextureId
    class TextureStorage
}

'=======================================================================================================================
package content {
    '===================================================================================================================
    class Content

    '-------------------------------------------------------------------------------------------------------------------
    Content *-- Color : or
    Content *-- texture_storage.TextureId : or
}

'=======================================================================================================================
package renderer_context {
    '===================================================================================================================
    abstract class RendererContext
}

'=======================================================================================================================
package render_2d {
    '===================================================================================================================
    abstract class GeometryBatch
    abstract class Renderer

    '-------------------------------------------------------------------------------------------------------------------
    Renderer --> GeometryBatch
}

'=======================================================================================================================
package render_3d {
    '===================================================================================================================
    abstract class GeometryBatch
    abstract class Renderer

    '-------------------------------------------------------------------------------------------------------------------
    Renderer --> GeometryBatch
}

'=======================================================================================================================
package render {
    '===================================================================================================================
    abstract class Renderer

    '-------------------------------------------------------------------------------------------------------------------
    Renderer *-- renderer_context.RendererContext
    Renderer *-- texture.TexturingMgr
    Renderer *-- texture_storage.TextureStorage
    Renderer *-- render_2d.Renderer
    Renderer *-- render_3d.Renderer
}

'=======================================================================================================================
@enduml
